src/objects/Materia__c.object
<CustomObject>
    <fields>
        <fullName>CicloMateria__c</fullName>
        <label>Ciclo de la materia</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estatus__c</fullName>
        <label>Estatus</label>
        <picklist>
            <picklistValues>
                <fullName>Activo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IdInterno__c</fullName>
        <label>Id Interno</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modalidad__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Modalidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Modalidad</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Materias (Modalidad)</relationshipLabel>
        <relationshipName>Modalidad</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Nivel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Nivel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>Materias</relationshipLabel>
        <relationshipName>Materias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Consecutivo de RVOE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plantel</label>
        <referenceTo>Plantel__c</referenceTo>
        <relationshipLabel>Materias</relationshipLabel>
        <relationshipName>Materias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programa__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Programa</label>
        <referenceTo>Programa__c</referenceTo>
        <relationshipLabel>Materias</relationshipLabel>
        <relationshipName>Materias</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Materia</label>
    <listViews>
        <fullName>All</fullName>
        <columns>IdInterno__c</columns>
        <columns>NAME</columns>
        <columns>Programa__c</columns>
        <columns>Plantel__c</columns>
        <columns>CicloMateria__c</columns>
        <columns>Plan__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Programa__c</field>
            <operation>contains</operation>
            <value>INSTITUCIONES</value>
        </filters>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Materia</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>